# Customer_Service_Assistant_Project_Blent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
docs/: architecture.md  database-schema.md  schema.sql
sql/: schema.sql
src/: app.py  config.py  validation.py
src/bot/: __init__.py  graph.py  prompts.py  state.py
src/chain/: __init__.py  graph.py  input_check.py  prompts.py
src/db/: __init__.py  engine.py
src/llm/: __init__.py  factory.py  mistral_local.py
src/prompt/: answer_formatting_v1.0.yaml  answer_formatting_v2.0.yaml  golden_dataset_v1.0.yaml  text_to_sql_v1.0.yaml  text_to_sql_v2.0.yaml
tests/: test_classifier.py  test_prompts.py  test_sql_validation.py
