[project]
name = "customer-service-assistant"
version = "0.1.0"
description = "Assistant service client Text-to-SQL"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Arnaud Duigou", email = "arnaud.duigou@data-boost.fr" },
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    # Base de données
    "sqlalchemy>=2.0",
    # Orchestration LLM
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-mistralai>=0.2",
    "langgraph>=0.2",
    # Interface
    "streamlit>=1.39",
    # Validation
    "pydantic>=2.7",
    # Chargement des prompts et datasets YAML
    "pyyaml>=6.0",
    # Embeddings pour le classifieur sémantique
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
# Backend LLM local quantisé (HF Transformers + accélérateurs)
local = [
    "torch>=2.4",
    "transformers>=4.46",
    "accelerate>=1.0",
    "langchain-huggingface>=0.1",
    "sentencepiece>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---- Ruff (linter + formatter) ----
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "data", "outputs"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "N",        # pep8-naming
    "SIM",      # simplify
    "RUF",      # ruff-specific
]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- pytest ----
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

# ---- mypy ----
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
